# shokunin-challenge-0316

./: Application.hs  Foundation.hs  Model.hs  Utils.hs  coffee-api2.cabal  stack.yaml
Handler/: Coffee.hs
Import/: NoFoundation.hs
Model/: CoffeeSize.hs
app/: devel.hs
config/: keter.yml  models  routes  settings.yml  test-settings.yml
db/: CoffeeDB.hs  db.hs
test/: TestImport.hs
test/Handler/: CoffeeSpec.hs
